--- a/Wed 25/day_02/card/index.html
+++ b/Wed 25/day_02/card/index.html
@@ -23,7 +23,17 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="list">
       <div class="card">
+        <div class="image">
+            <img src="https://media.techmaster.vn/api/static/bub3enc51co7s932dsk0/6PyUoB-T" alt="Khóa học nodejs">
+        </div>
+        <div class="content">
+            <h2>Lập trình Nodejs (cập nhật 2022)</h2>
+            <p>Trực tuyến </p>
+            <p>5 <span class="star"><i class="fa-solid fa-star"></i></span></p>
+        </div>
+        <div class="card">
           <div class="image">
               <img src="https://media.techmaster.vn/api/static/bub3enc51co7s932dsk0/6PyUoB-T" alt="Khóa học nodejs">
           </div>
@@ -32,6 +42,19 @@
               <p>Trực tuyến </p>
               <p>5 <span class="star"><i class="fa-solid fa-star"></i></span></p>
           </div>
-      </div>
+      <div class="card">
+        <div class="image">
+            <img src="https://media.techmaster.vn/api/static/bub3enc51co7s932dsk0/6PyUoB-T" alt="Khóa học nodejs">
+        </div>
+        <div class="content">
+            <h2>Lập trình Nodejs (cập nhật 2022)</h2>
+            <p>Trực tuyến </p>
+            <p>5 <span class="star"><i class="fa-solid fa-star"></i></span></p>
+        </div>
+        
+    </div>
+    </div>
+    </div>
+      
   </body>
 </html>
