fix lỗi menu lazada

--- a/Wed 25/day_05/menu_lazada/index.html
+++ b/Wed 25/day_05/menu_lazada/index.html
@@ -42,7 +42,7 @@
                                     <p><a href="https://www.lazada.vn/may-tinh-bang/?spm=a2o4n.home.cate_1.2.68b46afeH22fvt">Máy tính bảng</a></p>
                                 </li>
                                 <li class="menu-item">
-                                    <p><a href="https://www.lazada.vn/laptop/?spm=a2o4n.home.cate_1.3.68b46afeH22fvt"> <span>Laptop</span>
+                                    <p><a href="https://www.lazada.vn/laptop/?spm=a2o4n.home.cate_1.3.68b46afeH22fvt"> <span>Laptop</span></a>
                                         <span>
                                             <span class="icon"
                                                 ><i
@@ -50,7 +50,7 @@
                                                 ></i></span
                                         ></span>
         
-                                    </a></p>
+                                    </p>
                                     <div class="list-menu">
                                     <ul>
                                         <li class="list-item">
@@ -66,38 +66,44 @@
                                     </div>
                                 </li>
                                 <li class="menu-item">
-                                    <p><a href="https://www.lazada.vn/may-tinh-de-ban-va-phu-kien/?spm=a2o4n.home.cate_1.4.68b46afeH22fvt"><span>Máy tính để bàn</span>
+                                    <p><a href="https://www.lazada.vn/may-tinh-de-ban-va-phu-kien/?spm=a2o4n.home.cate_1.4.68b46afeH22fvt"><span>Máy tính để bàn</span></a>
                                         <span>
                                             <span class="icon"
                                                 ><i
                                                     class="fas fa-chevron-right"
                                                 ></i></span
                                         ></span>
-                                    </a></p>
+                                    </p>
                                 </li>
                                 <li class="menu-item">
-                                    <p><a href="https://www.lazada.vn/am-thanh/?spm=a2o4n.home.cate_1.5.68b46afeH22fvt"><span>Âm thanh</span>
+                                    <p><a href="https://www.lazada.vn/am-thanh/?spm=a2o4n.home.cate_1.5.68b46afeH22fvt"><span>Âm thanh</span></a>
                                         <span>
                                             <span class="icon"
                                                 ><i
                                                     class="fas fa-chevron-right"
                                                 ></i></span
                                         ></span>
-                                    </a></p>
+                                    </p>
                                 </li>
                                 <li class="menu-item">
-                                    <p><a href="https://www.lazada.vn/camera-giam-sat-2/?spm=a2o4n.home.cate_1.6.68b46afeH22fvt"><span>Camera giám sát</span>
-                                    </a></p>
-                                </li>
-                                <li class="menu-item">
-                                    <p><a href="#"><span>Máy ảnh kĩ thuật số</span>
+                                    <p><a href="https://www.lazada.vn/camera-giam-sat-2/?spm=a2o4n.home.cate_1.6.68b46afeH22fvt"><span>Camera giám sát</span></a>
                                         <span>
                                             <span class="icon"
                                                 ><i
                                                     class="fas fa-chevron-right"
                                                 ></i></span
                                         ></span>
-                                    </a></p>
+                                    </p>
+                                </li>
+                                <li class="menu-item">
+                                    <p><a href="https://www.lazada.vn/camera-giam-sat-2/?spm=a2o4n.home.cate_1.6.19056afe69XpfB"><span>Máy ảnh kĩ thuật số</span></a>
+                                        <span>
+                                            <span class="icon"
+                                                ><i
+                                                    class="fas fa-chevron-right"
+                                                ></i></span
+                                        ></span>
+                                    </p>
                                 </li>
                             </ul>
                         </div>
