--- a/Wed 25/day_07/Page_travel_demo/about.html
+++ b/Wed 25/day_07/Page_travel_demo/about.html
@@ -50,7 +50,7 @@
         <!-- Content -->
         <div id="content">
             <div class="content-agency">
-                <img src="/Page_demo/assets/img/agency-background.jpg" alt="agency-background" class="agency-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/agency-background.jpg" alt="agency-background" class="agency-img">
                 <div class="container-agency">
 
                     <p class="heading-content">THE AGENCY</p>
