--- a/Wed 25/day_07/Page_travel_demo/index.html
+++ b/Wed 25/day_07/Page_travel_demo/index.html
@@ -64,14 +64,14 @@
                     Start traveling the world today!</p>
                 <div class="content-container">
                     <div class="content-card">
-                        <img src="/Page_demo/assets/img/venezuela.jpg" alt="Venezuela" class="content-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/venezuela.jpg" alt="Venezuela" class="content-img">
                         <div class="card-title">
                             <p class="slider-heading">VENEZUELA</p>
                             <p class="card-info">Venezuela</p>
                         </div>
                     </div>
                     <div class="content-card">
-                        <img src="/Page_demo/assets/img/rome.jpg" alt="Eternal City" class="content-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/rome.jpg" alt="Eternal City" class="content-img">
                         <div class="card-title">
                             <p class="slider-heading">ITALY - ROME</p>
                             <p class="card-info">Eternal City</p>
@@ -79,7 +79,7 @@
 
                     </div>
                     <div class="content-card">
-                        <img src="/Page_demo/assets/img/autralia.jpg" alt="Australia" class="content-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/autralia.jpg" alt="Australia" class="content-img">
                         <div class="card-title">
                             <p class="slider-heading">AUSTRALIA</p>
                             <p class="card-info">Australia</p>
@@ -87,7 +87,7 @@
 
                     </div>
                     <div class="content-card">
-                        <img src="/Page_demo/assets/img/scotland.jpg" alt="Misty Mountains" class="content-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/scotland.jpg" alt="Misty Mountains" class="content-img">
                         <div class="card-title">
                             <p class="slider-heading">SCOTLAND</p>
                             <p class="card-info">Misty Mountains</p>
@@ -95,7 +95,7 @@
 
                     </div>
                     <div class="content-card">
-                        <img src="/Page_demo/assets/img/positano.jpg" alt="Weekend in Positano" class="content-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/positano.jpg" alt="Weekend in Positano" class="content-img">
                         <div class="card-title">
                             <p class="slider-heading">ITALY</p>
                             <p class="card-info">Weekend in Positano</p>
@@ -103,7 +103,7 @@
 
                     </div>
                     <div class="content-card">
-                        <img src="/Page_demo/assets/img/newyork.jpg" alt="New York" class="content-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/newyork.jpg" alt="New York" class="content-img">
                         <div class="card-title">
                             <p class="slider-heading">USA - NEW YORK</p>
                             <p class="card-info">New York</p>
@@ -111,7 +111,7 @@
 
                     </div>
                     <div class="content-card">
-                        <img src="/Page_demo/assets/img/morocco.jpg" alt="Morocco Colors" class="content-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/morocco.jpg" alt="Morocco Colors" class="content-img">
                         <div class="card-title">
                             <p class="slider-heading">MOROCCO</p>
                             <p class="card-info">Morocco Colors</p>
@@ -119,7 +119,7 @@
 
                     </div>
                     <div class="content-card">
-                        <img src="/Page_demo/assets/img/mikonos.jpg" alt="Visit Mikonos" class="content-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/mikonos.jpg" alt="Visit Mikonos" class="content-img">
                         <div class="card-title">
                             <p class="slider-heading">GREECE</p>
                             <p class="card-info">Visit Mikonos</p>
@@ -127,7 +127,7 @@
 
                     </div>
                     <div class="content-card">
-                        <img src="/Page_demo/assets/img/vietnam.jpg" alt="Ha Long Bay" class="content-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/vietnam.jpg" alt="Ha Long Bay" class="content-img">
                         <div class="card-title">
                             <p class="slider-heading">VIET NAM</p>
                             <p class="card-info">Ha Long Bay</p>
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="content-agency">
-                <img src="/Page_demo/assets/img/agency-background.jpg" alt="agency-background" class="agency-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/agency-background.jpg" alt="agency-background" class="agency-img">
                 <div class="container-agency">
 
                     <p class="slider-heading">THE AGENCY</p>
@@ -153,14 +153,14 @@
                 <p class="content-info-1">Latest from the <span>Blog</span></p>
                 <div class="blog-card">
                     <div class="blog-card-info">
-                        <img src="/Page_demo/assets/img/blog-image1.jpg" alt="blog-img-1" class="blog-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/blog-image1.jpg" alt="blog-img-1" class="blog-img">
                         <p class="blog-info">Discovering Mikonos</p>
 
                         <p class="blog-desc">BY: ANGELA MANSCORI</p>
 
                     </div>
                     <div class="blog-card-info">
-                        <img src="/Page_demo/assets/img/blog-image2.jpg" alt="blog-img-2" class="blog-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/blog-image2.jpg" alt="blog-img-2" class="blog-img">
                         <p class="blog-info">The Island of Vulcano</p>
 
                         <p class="blog-desc">BY: NISSUR AL BETTUR</p>
@@ -169,7 +169,7 @@
 
                     </div>
                     <div class="blog-card-info">
-                        <img src="/Page_demo/assets/img/blog-image3.jpg" alt="blog-img-3" class="blog-img">
+                        <img src="/Wed 25/day_07/Page_travel_demo/assets/img/blog-image3.jpg" alt="blog-img-3" class="blog-img">
                         <p class="blog-info">Cathedral in the Sea</p>
 
                         <p class="blog-desc">BY: JESUS A. BARRERO</p>
