--- a/Wed 25/day_07/Page_travel_demo/trips.html
+++ b/Wed 25/day_07/Page_travel_demo/trips.html
@@ -46,7 +46,7 @@
         </div>
         <!-- Slider -->
         <div id="slider">
-            <img src="/Page_demo/assets/img/background trips.jpg" alt="background trips" class="slider-img">
+            <img src="/Wed 25/day_07/Page_travel_demo/assets/img/background trips.jpg" alt="background trips" class="slider-img">
             <p class="slider-info"> <a href="./index.html">HOME </a>/ TRIPS</p>
         </div>
      </div>
@@ -61,7 +61,7 @@
          </div>
          <div class="content-container">
             <div class="content-card">
-                <img src="/Page_demo/assets/img/venezuela.jpg" alt="Venezuela" class="content-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/venezuela.jpg" alt="Venezuela" class="content-img">
                 <div class="detail">
                     <p class="cost">400$</p>
                     <div class="btn-oder">Oder Now</div>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="content-card">
-                <img src="/Page_demo/assets/img/rome.jpg" alt="Eternal City" class="content-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/rome.jpg" alt="Eternal City" class="content-img">
                 <div class="detail">
                     <p class="cost">500$</p>
                     <div class="btn-oder">Oder Now</div>
@@ -84,7 +84,7 @@
 
             </div>
             <div class="content-card">
-                <img src="/Page_demo/assets/img/autralia.jpg" alt="Australia" class="content-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/autralia.jpg" alt="Australia" class="content-img">
                 <div class="detail">
                     <p class="cost">452$</p>
                     <div class="btn-oder">Oder Now</div>
@@ -96,7 +96,7 @@
 
             </div>
             <div class="content-card">
-                <img src="/Page_demo/assets/img/scotland.jpg" alt="Misty Mountains" class="content-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/scotland.jpg" alt="Misty Mountains" class="content-img">
                 <div class="detail">
                     <p class="cost">458$</p>
                     <div class="btn-oder">Oder Now</div>
@@ -108,7 +108,7 @@
 
             </div>
             <div class="content-card">
-                <img src="/Page_demo/assets/img/positano.jpg" alt="Weekend in Positano" class="content-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/positano.jpg" alt="Weekend in Positano" class="content-img">
                 <div class="detail">
                     <p class="cost">320$</p>
                     <div class="btn-oder">Oder Now</div>
@@ -120,7 +120,7 @@
 
             </div>
             <div class="content-card">
-                <img src="/Page_demo/assets/img/newyork.jpg" alt="New York" class="content-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/newyork.jpg" alt="New York" class="content-img">
                 <div class="detail">
                     <p class="cost">350$</p>
                     <div class="btn-oder">Oder Now</div>
@@ -132,7 +132,7 @@
 
             </div>
             <div class="content-card">
-                <img src="/Page_demo/assets/img/morocco.jpg" alt="Morocco Colors" class="content-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/morocco.jpg" alt="Morocco Colors" class="content-img">
                 <div class="detail">
                     <p class="cost">420$</p>
                     <div class="btn-oder">Oder Now</div>
@@ -144,7 +144,7 @@
 
             </div>
             <div class="content-card">
-                <img src="/Page_demo/assets/img/mikonos.jpg" alt="Visit Mikonos" class="content-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/mikonos.jpg" alt="Visit Mikonos" class="content-img">
                 <div class="detail">
                     <p class="cost">330$</p>
                     <div class="btn-oder">Oder Now</div>
@@ -156,7 +156,7 @@
 
             </div>
             <div class="content-card">
-                <img src="/Page_demo/assets/img/vietnam.jpg" alt="Ha Long Bay" class="content-img">
+                <img src="/Wed 25/day_07/Page_travel_demo/assets/img/vietnam.jpg" alt="Ha Long Bay" class="content-img">
                 <div class="detail">
                     <p class="cost">300$</p>
                     <div class="btn-oder">Oder Now</div>
