--- a/Wed 25/day_07/Page_travel_demo/about.html
+++ b/Wed 25/day_07/Page_travel_demo/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abut</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/Page_demo/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/Page_demo//favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="//Wed 25/day_07/Page_travel_demo/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="//Wed 25/day_07/Page_travel_demo//favicon.ico" type="image/x-icon">
     <!-- Link font chữ -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
