--- a/Wed 25/day_21/Web_Product/shopping-cart.html
+++ b/Wed 25/day_21/Web_Product/shopping-cart.html
@@ -57,7 +57,7 @@
             </div>
 
             
-            <p class="fst-italic message">Không có sản phẩm trong giỏ hàng</p>
+            <p class="fst-italic message hide">Không có sản phẩm trong giỏ hàng</p>
             <div class="row shopping-cart">
                 <div class="col-md-8">
                     <div class="product-list">
