--- a/wed-project/index.html
+++ b/wed-project/index.html
@@ -823,7 +823,7 @@
     </div>
 
     <!-- Link slide -->
-    <script src="jquery.min.js"></script>
+    <!-- <script src="jquery.min.js"></script> -->
     <script src="./library/OwlCarousel2-2.3.4/docs/assets/owlcarousel/owl.carousel.min.js"></script>
     <!-- Bootstrap -->
     <script src="./library/bootstrap/bootstrap.bundle.min.js"></script>
