--- a/wed-project/favorite.html
+++ b/wed-project/favorite.html
@@ -126,12 +126,12 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="subnav">
-            <a href="#TRANG CHỦ" class="menu-item">TRANG CHỦ</a>
+            <a href="./index.html" class="menu-item">TRANG CHỦ</a>
             <a href="#NƯỚC HOA NAM" class="menu-item">NƯỚC HOA NAM</a>
             <a href="#NƯỚC HOA NỮ" class="menu-item">NƯỚC HOA NỮ</a>
             <a href="#KHUYẾN MÃI" class="menu-item">KHUYẾN MÃI</a>
             <a href="#TIN TỨC" class="menu-item">TIN TỨC</a>
-            <a href="#LIÊN HỆ" class="menu-item">LIÊN HỆ</a>
+            <a href="./contact.html" class="menu-item">LIÊN HỆ</a>
             <div class="subnav-tablet">
               <p class="menu-item-tablet">NƯỚC HOA NAM</p>
               <p class="menu-item-tablet">NƯỚC HOA NỮ</p>
