--- a/wed-project/product.html
+++ b/wed-project/product.html
@@ -142,7 +142,7 @@
             <a href="#NƯỚC HOA NỮ" class="menu-item">NƯỚC HOA NỮ</a>
             <a href="#KHUYẾN MÃI" class="menu-item">KHUYẾN MÃI</a>
             <a href="#TIN TỨC" class="menu-item">TIN TỨC</a>
-            <a href="#LIÊN HỆ" class="menu-item">LIÊN HỆ</a>
+            <a href="./contact.html" class="menu-item">LIÊN HỆ</a>
             <div class="subnav-tablet">
               <p class="menu-item-tablet">NƯỚC HOA NAM</p>
               <p class="menu-item-tablet">NƯỚC HOA NỮ</p>
@@ -678,7 +678,7 @@
          <div class="container">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb mt-3">
-              <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
+              <li class="breadcrumb-item"><a href="./index.html">Trang chủ</a></li>
               <li class="breadcrumb-item active" aria-current="page">Nước hoa nam</li>
             </ol>
           </nav>
