--- a/wed-project/public/index.html
+++ b/wed-project/public/index.html
@@ -1458,7 +1458,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <div class="owl-carousel owl-theme">
+          <div class="owl-carousel owl-theme ">
             <div class="item">
               <div class="row">
                 <div class="col">
@@ -2198,42 +2198,46 @@
         <div class="col-xl-6 col-lg-6 col-md-12">
           <div class="row">
             <div class="col-sm-12">
-              <div class="blog-item my-2 d-flex">
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                  <div class="image-blog">
-                    <img src="./img/blog1.webp" alt="blog-1">
+              <a href="./blog-details.html">
+                <div class="blog-item my-2 d-flex">
+                  <div class="col-lg-4 col-md-4 col-sm-4">
+                    <div class="image-blog">
+                      <img src="./img/blog1.webp" alt="blog-1">
+                    </div>
+                  </div>
+                  <div class="col-lg-8 col-md-8 col-sm-8">
+                    <div class="blog-info">
+                      <p>John Varvatos XX Artisan- Một mùi hương khô - ấm đầy nam tính, bạn muốn thử?</p>
+                      <p class="time-blog">03/07/2022 | Viết bởi: Blanc Perfume</p>
+                      <p class="posts">Link mua: John Varvatos XX Artisan Men EDT Người ta đã luôn quá quen với những...
+                      </p>
+                    </div>
                   </div>
                 </div>
-                <div class="col-lg-8 col-md-8 col-sm-8">
-                  <div class="blog-info">
-                    <p>John Varvatos XX Artisan- Một mùi hương khô - ấm đầy nam tính, bạn muốn thử?</p>
-                    <p class="time-blog">03/07/2022 | Viết bởi: Blanc Perfume</p>
-                    <p class="posts">Link mua: John Varvatos XX Artisan Men EDT Người ta đã luôn quá quen với những...
-                    </p>
-                  </div>
-                </div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-12">
           <div class="row">
             <div class="col-sm-12">
-              <div class="blog-item my-2 d-flex">
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                  <div class="image-blog">
-                    <img src="./img/blog1.webp" alt="blog-1">
+              <a href="./blog-details.html">
+                <div class="blog-item my-2 d-flex">
+                  <div class="col-lg-4 col-md-4 col-sm-4">
+                    <div class="image-blog">
+                      <img src="./img/blog1.webp" alt="blog-1">
+                    </div>
+                  </div>
+                  <div class="col-lg-8 col-md-8 col-sm-8">
+                    <div class="blog-info">
+                      <p>John Varvatos XX Artisan- Một mùi hương khô - ấm đầy nam tính, bạn muốn thử?</p>
+                      <p class="time-blog">03/07/2022 | Viết bởi: Blanc Perfume</p>
+                      <p class="posts">Link mua: John Varvatos XX Artisan Men EDT Người ta đã luôn quá quen với những...
+                      </p>
+                    </div>
                   </div>
                 </div>
-                <div class="col-lg-8 col-md-8 col-sm-8">
-                  <div class="blog-info">
-                    <p>John Varvatos XX Artisan- Một mùi hương khô - ấm đầy nam tính, bạn muốn thử?</p>
-                    <p class="time-blog">03/07/2022 | Viết bởi: Blanc Perfume</p>
-                    <p class="posts">Link mua: John Varvatos XX Artisan Men EDT Người ta đã luôn quá quen với những...
-                    </p>
-                  </div>
-                </div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
